--- a/static/css/game.css
+++ b/static/css/game.css
@@ -6,10 +6,8 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    block-size: 100vh;
-    block-size: 100dvh;
-    max-block-size: 100vh;
-    max-block-size: 100dvh;
+    block-size: 100%;
+    max-block-size: 100%;
     overflow: hidden;
   }
 
