--- a/static/css/lobby.css
+++ b/static/css/lobby.css
@@ -12,8 +12,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    block-size: 100vh;
-    block-size: 100dvh;
+    block-size: 100%;
     overflow: hidden;
     background: var(--color-panel-screen);
   }
